--- a/ecs-phone-back/src/main/resources/application.yml
+++ b/ecs-phone-back/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     username: root
     password: 123456
-    url: jdbc:mysql://127.0.0.1:3306/srit_credit?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC&useSSL=false 
+    url: jdbc:mysql://127.0.0.1:3306/srit_credit?useUnicode=true&characterEncoding=utf-8&serverTimezone=Hongkong&useSSL=false 
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
   cloud:
